scripts/nullness/annotator/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8.txt
../annotator/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8/src/fr/noxx90/jflam/renderer/impl/RendererTask.java:81: error: [return] incompatible types in return.
		return chosenOne;
		       ^
  type of expression: @Initialized @Nullable Form
  method return type: @Initialized @NonNull Form
../annotator/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8/src/fr/noxx90/jflam/model/Form.java:30: error: [method.invocation] call to setByTriangle(fr.noxx90.jflam.model.Triangle) not allowed on the given receiver.
		setByTriangle(triangle);
		             ^
  found   : @UnderInitialization @NonNull Form
  required: @Initialized @NonNull Form
../annotator/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8/src/fr/noxx90/jflam/renderer/impl/DefaultHistogramRenderer.java:22: error: [initialization.field.uninitialized] the default constructor does not initialize field rangeMap
	protected RangeMap<Float, Form> rangeMap;
	                                ^
../annotator/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8/src/fr/noxx90/jflam/renderer/impl/DefaultHistogramRenderer.java:137: error: [return] incompatible types in return.
		return chosenOne;
		       ^
  type of expression: @Initialized @Nullable Form
  method return type: @Initialized @NonNull Form
../annotator/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8/src/fr/noxx90/jflam/FlameLogger.java:59: error: [dereference.of.nullable] dereference of possibly-null reference writer
        	writer.println(builder);        	
        	^
../annotator/urld5c972ef81_noxx90_jflam_tgz-pJ8-fr_noxx90_jflam_BenchmarkJ8/src/fr/noxx90/jflam/JFlamMain.java:67: error: [argument] incompatible argument for parameter arg3 of Graphics.drawImage.
				g.drawImage(image, 0, 0, null);
				                         ^
  found   : null (NullType)
  required: @Initialized @NonNull ImageObserver
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
6 errors
